:hammer: adjusted due to code review

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </button>
                 <p class="alternative__text">Or</p>
                 <input type="text" placeholder="Username or Email Address">
-                <input type="password" name="" id="" placeholder="Password">
-                <input type="password" name="" id="" placeholder="Confirm password">
+                <input type="password" name="password" id="password" placeholder="Password">
+                <input type="password" name="confirm__password" id="confirm__password" placeholder="Confirm password">
                 <button class="create-account__button">Create account</button>
             </form>
         </div>
